--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^7.0.0",
+    "argon2": "^0.44.0",
+    "class-validator": "^0.14.3",
     "prisma": "^7.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
