--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,10 +24,10 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
-    "@prisma/client": "^7.0.0",
+    "@prisma/client": "^6.19.0",
     "argon2": "^0.44.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
-    "prisma": "^7.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -47,6 +47,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
+    "prisma": "^6.19.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
